k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    project: adbros-demo
spec:
  ports:
    - port: 80
  selector:
    project: adbros-demo
    app: backend
