k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    project: adbros-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    project: adbros-demo
    app: frontend
