k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: backend.k8s.sikademo.com
      http:
        paths:
          - path: /
            backend:
              serviceName: backend
              servicePort: 80
    - host: frontend.k8s.sikademo.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
